TalkBack no longer navigates to certain headings within links.
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox71 | --- | wontfix |
| firefox72 | --- | wontfix |
| firefox73 | --- | wontfix |
| firefox74 | --- | verified |
People
(Reporter: MarcoZ, Assigned: eeejay)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
This is a regression from the refactor in bug 1564549. STR:
- Go to this link.
- Navigate by heading.
- Expected: TalkBack should move to all the headings, including the ones inside the links.
- Actual: TalkBack only finds the headings that are outside the links.
Before bug 1564549, this worked fine. A distilled down version of the links is
data:text/html,<a href="https://heise.de/newsticker"><span>08:30</span><h3>Link to the newsticker page</h3></a>
Comment 1•6 years ago
|
||
Firefox for Android is unaffected and we are half way to the 72 release with no strong driver for a dot release, so that is wontfix for 71.
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 2•6 years ago
|
||
Chrome prunes the subtrees of links and headings (with single text leaf
children) and we mimic this in Gecko. The problem is that sometimes a
heading can be a child of a link, and it would be impossible to reach
when navigating by headings.
The main reason we mimiced chrome is because we would getthe name of the
node and its subtree uttered, so you would hear the name of the node
twice. By using contentDescription we can suppress the subtree from
TalkBack's utterance and preserve the node's children for heading
navigation.
Comment 4•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Comment 5•6 years ago
|
||
Verified using the latest version of Firefox Preview Nightly 2/16 #20470606.
Device: Samsung Galaxy S8 (Android 9).
Due to that, I'll close this issue as verified, thanks.
Updated•6 years ago
|
Description
•