Bug 1604103 - Instead of pruning links and headings use contentDescription. r=Jamie

Chrome prunes the subtrees of links and headings (with single text leaf
children) and we mimic this in Gecko. The problem is that sometimes a
heading can be a child of a link, and it would be impossible to reach
when navigating by headings.

The main reason we mimiced chrome is because we would getthe name of the
node and its subtree uttered, so you would hear the name of the node
twice. By using contentDescription we can suppress the subtree from
TalkBack's utterance and preserve the node's children for heading
navigation.

Differential Revision: https://phabricator.services.mozilla.com/D61766

--HG--
extra : moz-landing-system : lando