mobile/android/geckoview/src/androidTest/java/org/mozilla/geckoview/test/AccessibilityTest.kt
@@ -545,7 +545,7 @@ class ZZAccessibilityTest : BaseSessionTest() {
             override fun onAccessibilityFocused(event: AccessibilityEvent) {
                 nodeId = getSourceId(event)
                 val node = createNodeInfo(nodeId)
-                assertThat("Accessibility focus on link", node.text as String, startsWith("anim id"))
+                assertThat("Accessibility focus on link", node.contentDescription as String, startsWith("anim id"))
             }
         })
 
@@ -595,7 +595,7 @@ class ZZAccessibilityTest : BaseSessionTest() {
             override fun onAccessibilityFocused(event: AccessibilityEvent) {
                 nodeId = getSourceId(event)
                 val node = createNodeInfo(nodeId)
-                assertThat("Accessibility focus on link", node.text as String, startsWith("anim id"))
+                assertThat("Accessibility focus on link", node.contentDescription as String, startsWith("anim id"))
             }
         })
 
@@ -686,7 +686,7 @@ class ZZAccessibilityTest : BaseSessionTest() {
             override fun onAccessibilityFocused(event: AccessibilityEvent) {
                 nodeId = getSourceId(event)
                 val node = createNodeInfo(nodeId)
-                assertThat("Accessibility focus on first heading", node.text as String, startsWith("Fried cheese"))
+                assertThat("Accessibility focus on first heading", node.contentDescription as String, startsWith("Fried cheese"))
                 if (Build.VERSION.SDK_INT >= 19) {
                     assertThat("First heading is level 1",
                             node.extras.getCharSequence("AccessibilityNodeInfo.roleDescription")!!.toString(),
@@ -701,7 +701,7 @@ class ZZAccessibilityTest : BaseSessionTest() {
             override fun onAccessibilityFocused(event: AccessibilityEvent) {
                 nodeId = getSourceId(event)
                 val node = createNodeInfo(nodeId)
-                assertThat("Accessibility focus on second heading", node.text as String, startsWith("Popcorn shrimp"))
+                assertThat("Accessibility focus on second heading", node.contentDescription as String, startsWith("Popcorn shrimp"))
                 if (Build.VERSION.SDK_INT >= 19) {
                     assertThat("Second heading is level 2",
                             node.extras.getCharSequence("AccessibilityNodeInfo.roleDescription")!!.toString(),
@@ -716,7 +716,7 @@ class ZZAccessibilityTest : BaseSessionTest() {
             override fun onAccessibilityFocused(event: AccessibilityEvent) {
                 nodeId = getSourceId(event)
                 val node = createNodeInfo(nodeId)
-                assertThat("Accessibility focus on second heading", node.text as String, startsWith("Chicken fingers"))
+                assertThat("Accessibility focus on second heading", node.contentDescription as String, startsWith("Chicken fingers"))
                 if (Build.VERSION.SDK_INT >= 19) {
                     assertThat("Third heading is level 3",
                             node.extras.getCharSequence("AccessibilityNodeInfo.roleDescription")!!.toString(),
@@ -1248,7 +1248,7 @@ class ZZAccessibilityTest : BaseSessionTest() {
                 nodeId = getSourceId(event)
                 val node = createNodeInfo(nodeId)
                 assertThat("Accessibility focus on a with href",
-                    node.text as String, startsWith("a with href"))
+                    node.contentDescription as String, startsWith("a with href"))
                 if (Build.VERSION.SDK_INT >= 19) {
                     assertThat("a with href is a link",
                             node.extras.getCharSequence("AccessibilityNodeInfo.roleDescription")!!.toString(),
@@ -1296,7 +1296,7 @@ class ZZAccessibilityTest : BaseSessionTest() {
                 nodeId = getSourceId(event)
                 val node = createNodeInfo(nodeId)
                 assertThat("Accessibility focus on a with onclick",
-                    node.text as String, startsWith("a with onclick"))
+                    node.contentDescription as String, startsWith("a with onclick"))
                 if (Build.VERSION.SDK_INT >= 19) {
                     assertThat("a with onclick is a link",
                             node.extras.getCharSequence("AccessibilityNodeInfo.roleDescription")!!.toString(),
@@ -1312,7 +1312,7 @@ class ZZAccessibilityTest : BaseSessionTest() {
                 nodeId = getSourceId(event)
                 val node = createNodeInfo(nodeId)
                 assertThat("Accessibility focus on span with role link",
-                    node.text as String, startsWith("span with role link"))
+                    node.contentDescription as String, startsWith("span with role link"))
                 if (Build.VERSION.SDK_INT >= 19) {
                     assertThat("span with role link is a link",
                             node.extras.getCharSequence("AccessibilityNodeInfo.roleDescription")!!.toString(),
@@ -1337,7 +1337,7 @@ class ZZAccessibilityTest : BaseSessionTest() {
                 nodeId = getSourceId(event)
                 val node = createNodeInfo(nodeId)
                 assertThat("Accessibility focus on a with href",
-                    node.text as String, startsWith("a with href"))
+                    node.contentDescription as String, startsWith("a with href"))
             }
         })
 
@@ -1348,7 +1348,7 @@ class ZZAccessibilityTest : BaseSessionTest() {
                 nodeId = getSourceId(event)
                 val node = createNodeInfo(nodeId)
                 assertThat("Accessibility focus on a with onclick",
-                    node.text as String, startsWith("a with onclick"))
+                    node.contentDescription as String, startsWith("a with onclick"))
             }
         })
 
@@ -1359,7 +1359,7 @@ class ZZAccessibilityTest : BaseSessionTest() {
                 nodeId = getSourceId(event)
                 val node = createNodeInfo(nodeId)
                 assertThat("Accessibility focus on span with role link",
-                    node.text as String, startsWith("span with role link"))
+                    node.contentDescription as String, startsWith("span with role link"))
             }
         })
     }
